--- a/changelog/2025/2025-01-30-cart.md
+++ b/changelog/2025/2025-01-30-cart.md
@@ -23,7 +23,7 @@ The `priceListId` field  has been added to the get a cart endpoint. The field is
 
 | Endpoint                                                                 | Description                                                    |
 | ----------------------------------------------------------------------   | ---------------------------------------------------------------|
-| [Retrieving cart details by ID](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/api-references/checkout/cart/api-reference/carts#get-cart-tenant-carts-cartid) | Added a new `priceListId` (items.price.priceListId) field to the response.                                     |
+| [Retrieving cart details by ID]https://developer.emporix.io/api-references/api-guides-and-references/api-references/checkout/cart/api-reference/carts#get-cart-tenant-carts-cartid) | Added a new `priceListId` (items.price.priceListId) field to the response.                                     |
 
 ## Known problems
 
