--- a/changelog/2025/2025-02-18-cart-d.md
+++ b/changelog/2025/2025-02-18-cart-d.md
@@ -24,7 +24,7 @@ The field has been deprecated, cart's calculatedPrice relays on site's configura
 
 | Endpoint                                                                         | Description                                    |
 |----------------------------------------------------------------------------------|------------------------------------------------|
-| [Applying a discount to cart](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/api-references/checkout/cart/api-reference/discounts#post-cart-tenant-carts-cartid-discounts) | Deprecated request attribute `calculationType` |
+| [Applying a discount to cart]https://developer.emporix.io/api-references/api-guides-and-references/api-references/checkout/cart/api-reference/discounts#post-cart-tenant-carts-cartid-discounts) | Deprecated request attribute `calculationType` |
 
 ## Known problems
 
