--- a/changelog/2025/2025-03-05-order.md
+++ b/changelog/2025/2025-03-05-order.md
@@ -23,11 +23,11 @@ This field is intended exclusively for B2B cases and specifies the legal entity 
 
 | Endpoint                                                                                            | Description                                     |
 |-----------------------------------------------------------------------------------------------------|-------------------------------------------------|
-| [Creating a new order](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders)                  | New request attribute `legalEntityId` added.  |
-| [Updating an order](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#put-order-v2-tenant-salesorders-orderid)                               | New request attribute `legalEntityId` added.  |
-| [Partially updating an order](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#put-order-v2-tenant-salesorders-orderid)           | New request attribute `legalEntityId` added.  |
-| [Retrieving orders](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders)                     | New response attribute `legalEntityId` added.  |
-| [Retrieving a specific order by ID](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders-orderid)    | New response attribute `legalEntityId` added.  |
+| [Creating a new order]https://developer.emporix.io/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders)                  | New request attribute `legalEntityId` added.  |
+| [Updating an order]https://developer.emporix.io/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#put-order-v2-tenant-salesorders-orderid)                               | New request attribute `legalEntityId` added.  |
+| [Partially updating an order]https://developer.emporix.io/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#put-order-v2-tenant-salesorders-orderid)           | New request attribute `legalEntityId` added.  |
+| [Retrieving orders]https://developer.emporix.io/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders)                     | New response attribute `legalEntityId` added.  |
+| [Retrieving a specific order by ID]https://developer.emporix.io/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders-orderid)    | New response attribute `legalEntityId` added.  |
 
 ## Known problems
 
