--- a/changelog/2025/2025-03-07-order.md
+++ b/changelog/2025/2025-03-07-order.md
@@ -29,12 +29,12 @@ These changes streamline price handling while ensuring existing integrations con
 
 | Endpoint                                                                                          | Description                                                                                     |
 |---------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------|
-| [Creating a new order (tenant-managed)](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders) | Order level `calculatedPrice` marked as mandatory and `totalPrice` marked as optional.          |
-| [Creating a new order (tenant-managed)](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders) | Order entry level `calculatedPrice` marked as mandatory and `totalPrice` marked as optional.    |
-| [Creating a new order (tenant-managed)](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders) | Order entry level `calculatedUnitPrice` marked as mandatory and `unitPrice` marked as optional. |
-| [Creating a new order (customer-managed)](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders)        | Order level `calculatedPrice` marked as mandatory and `totalPrice` marked as optional.          |
-| [Creating a new order (customer-managed)](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders)        | Order entry level `calculatedPrice` marked as mandatory and `totalPrice` marked as optional.    |
-| [Creating a new order (customer-managed)](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders)        | Order entry level `calculatedUnitPrice` marked as mandatory and `unitPrice` marked as optional. |
+| [Creating a new order (tenant-managed)]https://developer.emporix.io/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders) | Order level `calculatedPrice` marked as mandatory and `totalPrice` marked as optional.          |
+| [Creating a new order (tenant-managed)]https://developer.emporix.io/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders) | Order entry level `calculatedPrice` marked as mandatory and `totalPrice` marked as optional.    |
+| [Creating a new order (tenant-managed)]https://developer.emporix.io/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders) | Order entry level `calculatedUnitPrice` marked as mandatory and `unitPrice` marked as optional. |
+| [Creating a new order (customer-managed)]https://developer.emporix.io/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders)        | Order level `calculatedPrice` marked as mandatory and `totalPrice` marked as optional.          |
+| [Creating a new order (customer-managed)]https://developer.emporix.io/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders)        | Order entry level `calculatedPrice` marked as mandatory and `totalPrice` marked as optional.    |
+| [Creating a new order (customer-managed)]https://developer.emporix.io/api-references/api-guides-and-references/api-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders)        | Order entry level `calculatedUnitPrice` marked as mandatory and `unitPrice` marked as optional. |
 
 
 ## Known problems
