--- a/changelog/2025/2025-04-17-product.md
+++ b/changelog/2025/2025-04-17-product.md
@@ -23,7 +23,7 @@ Endpoint for searching by YRNs will be removed on 2025-10-17.
 
 | Endpoint                                                                                        | Description                                                                                                                                                                               |
 |-------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| [Searching for products by YRNs](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/api-references/products-labels-and-brands/product-service/api-reference/products#post-product-tenant-search))  | Endpoint will be removed. Please use [/product/{tenant}/products/search](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/api-references/products-labels-and-brands/product-service/api-reference/products#post-product-tenant-products-search) instead.                              |
+| [Searching for products by YRNs]https://developer.emporix.io/api-references/api-guides-and-references/api-references/products-labels-and-brands/product-service/api-reference/products#post-product-tenant-search))  | Endpoint will be removed. Please use [/product/{tenant}/products/search]https://developer.emporix.io/api-references/api-guides-and-references/api-references/products-labels-and-brands/product-service/api-reference/products#post-product-tenant-products-search) instead.                              |
 
 ## Known problems
 
