--- a/changelog/2025/2025-06-12-cart.md
+++ b/changelog/2025/2025-06-12-cart.md
@@ -17,11 +17,11 @@ layout:
 
 ## Overview
 
-The Cart Service `calculatedPrice` has been enriched:
-`totalDiscounts` has a new `price` field that contains all price details.
-`appliedDiscounts` have a new `price` field that contains all price details.
+The `calculatedPrice` of Cart Service has been enriched with new fields:
+- `totalDiscounts` has a new `price` field that contains all price details.
+- `appliedDiscounts` have a new `price` field that contains all price details.
 
-The `calculatedPrice` or cart level has new fields
+The `calculatedPrice` or cart level has new fields:
 - `shipping` price before discounts
 - `fees` price before discounts
 
@@ -29,9 +29,9 @@ The `calculatedPrice` or cart level has new fields
 
 | Endpoint                                                                                                                                                                                   | Description                                                            |
 |--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------|
-| [Retrieving cart details by criteria](https://developer.emporix.io/api-references/api-guides-and-references/checkout/cart/api-reference/carts#get-cart-tenant-carts)                       | `calculatedPrice` has been enriched in cart and cart items responses.  |
-| [Retrieving cart details by ID](https://developer.emporix.io/api-references/api-guides-and-references/checkout/cart/api-reference/carts#get-cart-tenant-carts-cartid)                      | `calculatedPrice` has been enriched in cart and cart items responses.  |
-| [Retrieving all products added to a cart](https://developer.emporix.io/api-references/api-guides-and-references/checkout/cart/api-reference/cart-items#get-cart-tenant-carts-cartid-items) | `calculatedPrice` fhas been enriched in cart and cart items responses. |
+| [Retrieving cart details by criteria](https://developer.emporix.io/api-references/api-guides-and-references/checkout/cart/api-reference/carts#get-cart-tenant-carts)                       | The `calculatedPrice` attribute has been enriched in cart and cart items responses.  |
+| [Retrieving cart details by ID](https://developer.emporix.io/api-references/api-guides-and-references/checkout/cart/api-reference/carts#get-cart-tenant-carts-cartid)                      |The `calculatedPrice` attribute has been enriched in cart and cart items responses.  |
+| [Retrieving all products added to a cart](https://developer.emporix.io/api-references/api-guides-and-references/checkout/cart/api-reference/cart-items#get-cart-tenant-carts-cartid-items) | The `calculatedPrice` attribute has been enriched in cart and cart items responses. |
 
 ## Known problems
 
