--- a/changelog/2025/2025-06-12-order.md
+++ b/changelog/2025/2025-06-12-order.md
@@ -17,9 +17,9 @@ layout:
 
 ## Overview
 
-The Order Service `calculatedPrice` has been enriched:
-`totalDiscounts` has a new `price` field that contains all price details.
-`appliedDiscounts` have a new `price` field that contains all price details.
+The `calculatedPrice` of Order Service has been enriched with new fields:
+- `totalDiscounts` has a new `price` field that contains all price details.
+- `appliedDiscounts` have a new `price` field that contains all price details.
 
 The `calculatedPrice` or cart level has new fields
 - `shipping` price before discounts
@@ -29,10 +29,10 @@ The `calculatedPrice` or cart level has new fields
 
 | Endpoint                                                                                                                                                                                            | Description                                                               |
 |-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------|
-| [Creating a new order as employee](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders)         | `calculatedPrice` has been enriched in order and order entries.           |
-| [Creating a new order as customer](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders)            | `calculatedPrice` has been enriched in order and order entries.           |
-| [Retrieving order details](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders-orderid)             | `calculatedPrice` has been enriched in order and order entries responses. |
-| [Retrieving a specific order by ID](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders-orderid) | `calculatedPrice` has been enriched in order and order entries responses. |
+| [Creating a new order as employee](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders)         | The `calculatedPrice` attribute has been enriched in order and order entries.           |
+| [Creating a new order as customer](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders)            | The `calculatedPrice` attribute has been enriched in order and order entries.           |
+| [Retrieving order details](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders-orderid)             | The `calculatedPrice` attribute has been enriched in order and order entries responses. |
+| [Retrieving a specific order by ID](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders-orderid) | The `calculatedPrice` attribute has been enriched in order and order entries responses. |
 
 ## Known problems
 
