--- a/changelog/2025/2025-06-12-cart.md
+++ b/changelog/2025/2025-06-12-cart.md
@@ -18,8 +18,8 @@ layout:
 ## Overview
 
 The `calculatedPrice` of Cart Service has been enriched with new fields:
-- `totalDiscounts` has a new `price` field that contains all price details.
-- `appliedDiscounts` have a new `price` field that contains all price details.
+- `totalDiscounts` has a new `price` field that contains all price details
+- `appliedDiscounts` has a new `price` field that contains all price details
 
 The `calculatedPrice` or cart level has new fields:
 - `shipping` price before discounts
