--- a/changelog/2025/2025-07-10-iam.md
+++ b/changelog/2025/2025-07-10-iam.md
@@ -21,11 +21,11 @@ New endpoints that returns users that belong to vendor have been added.
 
 ## Updated endpoints
 
-| Endpoint                                                                                                                                                                                                     | Description                                                      |
-|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------|
-| [Creating a new group](https://developer.emporix.io/api-references/api-guides-and-references/users-and-permissions/iam/api-reference/groups#post-iam-tenant-groups)                                          | The attribute `vendorId` has been added.                         |
-| [Retrieving a group](https://developer.emporix.io/api-references/api-guides-and-references/users-and-permissions/iam/api-reference/groups#get-iam-tenant-groups-groupid)                                     | The attribute `vendorId` has been added.                         |
-| [Retrieving a list of users](https://developer.emporix.io/api-references/api-guides-and-references/users-and-permissions/iam/api-reference/management-dashboard-users#NO_CLUE_HOW_TO_GET_THIS_END_PATH_HERE) | New endpoint that return's list of users belonging to the vendor |
+| Endpoint                                                                                                                                                                                                            | Description                                                      |
+|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------|
+| [Creating a new group](https://developer.emporix.io/api-references/api-guides-and-references/users-and-permissions/iam/api-reference/groups#post-iam-tenant-groups)                                                 | The attribute `vendorId` has been added.                         |
+| [Retrieving a group](https://developer.emporix.io/api-references/api-guides-and-references/users-and-permissions/iam/api-reference/groups#get-iam-tenant-groups-groupid)                                            | The attribute `vendorId` has been added.                         |
+| [Retrieving a list of vendor users](https://developer.emporix.io/api-references/api-guides-and-references/users-and-permissions/iam/api-reference/management-dashboard-users#NO_CLUE_HOW_TO_GET_THIS_END_PATH_HERE) | New endpoint that return's list of users belonging to the vendor |
 //TODO: technical writed: please add the path i dont know basd on what its generated in git book
 ## Known problems
 
