--- a/changelog/2025/2025-07-10-order.md
+++ b/changelog/2025/2025-07-10-order.md
@@ -13,11 +13,11 @@ layout:
     visible: true
 ---
 
-# 2025-07-10: Order Service - vendorId added
+# 2025-07-10: Order Service - vendor added
 
 ## Overview
 
-A new attribute `vendorId` has been added to the order object. A vendor employee can see and modify only orders that belong to their vendor.
+A new attribute `vendor` has been added to the order object. A vendor employee can see and modify only orders that belong to their vendor.
 
 ## New scopes
 - `order.order_read_by_vendor`
@@ -25,16 +25,16 @@ A new attribute `vendorId` has been added to the order object. A vendor employee
 
 ## Modified endpoints
 
-| Endpoint                                                                                                                                                                                            | Description                     |
-|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------|
-| [Creating a new order](https://developer.emporix.io/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders)                                    | New attribute `vendorId` added. |
-| [Retrieving orders](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed)                                                         | New attribute `vendorId` added. |
-| [Retrieving a specific order by ID](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders-orderid) | New attribute `vendorId` added. |
-| [Updating an order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#put-order-v2-tenant-salesorders-orderid)                 | New attribute `vendorId` added. |
-| [Partially updating an order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#patch-order-v2-tenant-salesorders-orderid)     | New attribute `vendorId` added. |
-| [Creating a new order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders)                        | New attribute `vendorId` added. |
-| [Retrieving order details](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders-orderid)             | New attribute `vendorId` added. |
-| [Retrieving a list of orders](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders)                  | New attribute `vendorId` added. |
+| Endpoint                                                                                                                                                                                            | Description                   |
+|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------|
+| [Creating a new order](https://developer.emporix.io/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders)                                    | New attribute `vendor` added. |
+| [Retrieving orders](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed)                                                         | New attribute `vendor` added. |
+| [Retrieving a specific order by ID](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders-orderid) | New attribute `vendor` added. |
+| [Updating an order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#put-order-v2-tenant-salesorders-orderid)                 | New attribute `vendor` added. |
+| [Partially updating an order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#patch-order-v2-tenant-salesorders-orderid)     | New attribute `vendor` added. |
+| [Creating a new order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders)                        | New attribute `vendor` added. |
+| [Retrieving order details](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders-orderid)             | New attribute `vendor` added. |
+| [Retrieving a list of orders](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders)                  | New attribute `vendor` added. |
 
 ## Known problems
 
