--- a/changelog/2025/2025-07-10-product.md
+++ b/changelog/2025/2025-07-10-product.md
@@ -25,15 +25,15 @@ New field `vendorId` was added to the product model. A Vendor employee can see o
 
 ## Modified endpoints
 
-| Endpoint                                                                                                                                                                                                                  | Description                     |
-|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------|
-| [Creating a new product](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/product-service/api-reference/products)                                                         | New attribute `vendorId` added. |
-| [Retrieving a product's details](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/product-service/api-reference/products#get-product-tenant-products-productid)           | New attribute `vendorId` added. |
-| [Retrieving a list of products](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/product-service/api-reference/products#get-product-tenant-products)                      | New attribute `vendorId` added. |
-| [Upserting a product](/https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/product-service/api-reference/products#put-product-tenant-products-productid)                     | New attribute `vendorId` added. |
-| [Partially updating a product's details](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/product-service/api-reference/products#patch-product-tenant-products-productid) | New attribute `vendorId` added. |
-| [Creating multiple products](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/product-service/api-reference/products#post-product-tenant-products-bulk)                   | New attribute `vendorId` added. |
-| [Upserting multiple products](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/product-service/api-reference/products#put-product-tenant-products-bulk)                   | New attribute `vendorId` added. |
+| Endpoint                                                                                                                                                                                                                  | Description                   |
+|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------|
+| [Creating a new product](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/product-service/api-reference/products)                                                         | New attribute `vendor` added. |
+| [Retrieving a product's details](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/product-service/api-reference/products#get-product-tenant-products-productid)           | New attribute `vendor` added. |
+| [Retrieving a list of products](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/product-service/api-reference/products#get-product-tenant-products)                      | New attribute `vendor` added. |
+| [Upserting a product](/https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/product-service/api-reference/products#put-product-tenant-products-productid)                     | New attribute `vendor` added. |
+| [Partially updating a product's details](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/product-service/api-reference/products#patch-product-tenant-products-productid) | New attribute `vendor` added. |
+| [Creating multiple products](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/product-service/api-reference/products#post-product-tenant-products-bulk)                   | New attribute `vendor` added. |
+| [Upserting multiple products](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/product-service/api-reference/products#put-product-tenant-products-bulk)                   | New attribute `vendor` added. |
 
 ## Known problems
 
