--- a/changelog/2025/2025-07-10-iam.md
+++ b/changelog/2025/2025-07-10-iam.md
@@ -17,7 +17,7 @@ layout:
 ## Overview
 
 A new attribute `vendorId` has been added to the group entity. The attribute is used to identify the vendor that owns the group and can be set only when a group is created.
-New endpoints that returns users that belong to vendor have been added.
+New endpoints that return users that belong to vendor have been added.
 
 ## Updated endpoints
 
@@ -25,8 +25,8 @@ New endpoints that returns users that belong to vendor have been added.
 |---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------|
 | [Creating a new group](https://developer.emporix.io/api-references/api-guides-and-references/users-and-permissions/iam/api-reference/groups#post-iam-tenant-groups)                                                 | The attribute `vendorId` has been added.                         |
 | [Retrieving a group](https://developer.emporix.io/api-references/api-guides-and-references/users-and-permissions/iam/api-reference/groups#get-iam-tenant-groups-groupid)                                            | The attribute `vendorId` has been added.                         |
-| [Retrieving a list of vendor users](https://developer.emporix.io/api-references/api-guides-and-references/users-and-permissions/iam/api-reference/management-dashboard-users#NO_CLUE_HOW_TO_GET_THIS_END_PATH_HERE) | New endpoint that return's list of users belonging to the vendor |
-//TODO: technical writed: please add the path i dont know basd on what its generated in git book
+| [Retrieving a list of vendor users](https://developer.emporix.io/api-references/api-guides-and-references/users-and-permissions/iam/api-reference/management-dashboard-users#get-iam-tenant-users-vendors-vendorid) | New endpoint that return's list of users belonging to the vendor |
+
 ## Known problems
 
 There are no known problems.
