--- a/changelog/2025/2025-07-10-vendor.md
+++ b/changelog/2025/2025-07-10-vendor.md
@@ -17,7 +17,7 @@ layout:
 
 ## Overview
 
-The Vendor service allows you to manage vendors and their employees in your system. The employees will have access to vendor's products and orders.
+The Vendor service allows you to manage vendors and their employees in your system. The employees have access to vendor's products and orders only.
 
 A vendor can have a subsidiary that represents a subdivision of the main vendor. Every vendor and subsidiary can have locations.
 
@@ -25,9 +25,8 @@ A vendor can have a subsidiary that represents a subdivision of the main vendor.
 
 | Endpoint                                                                                                                                                                    | Description                                        |
 |-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------|
-| [Vendor service](https://developer.emporix.io/api-guides-and-references/companies-and-customers/vendor/api-reference/NO_CLUE_WHERE_TO_GET_THIS_FOR_A_NEW_SERVICE)           | New service for vendors management added.          |
-| [Vendor service locations](https://developer.emporix.io/api-guides-and-references/companies-and-customers/vendor/api-reference/NO_CLUE_WHERE_TO_GET_THIS_FOR_A_NEW_SERVICE) | New service for vendor locations management added. |
-//TODO: I dont know if we should two link or one. I dont think we should add every api separately - if there is something new then customers will just open new api doc for the entire service. 
+| [Vendor service](https://developer.emporix.io/api-references/~/revisions/Wfx24n9ntPczSMvu90PA/api-guides-and-references/companies-and-customers/vendor-service)           | New service for vendors management vendor locations added.        |
+
 ## Known problems
 
 There are no known problems.
