removal of tutorial

--- a/changelog/2025/2025-07-17-order.md
+++ b/changelog/2025/2025-07-17-order.md
@@ -13,11 +13,11 @@ layout:
     visible: true
 ---
 
-# 2025-07-10: Order Service - vendor added
+# 2025-07-17: Order Service - vendor added
 
 ## Overview
 
-A new attribute `vendor` has been added to the order object. A vendor employee can see and modify only orders that belong to their vendor.
+A new attribute `vendor` has been added to the order object. Vendor employees can see and modify only orders that belong to their vendor.
 
 ## New scopes
 - `order.order_read_by_vendor`
