--- a/changelog/2025/2025-07-17-product.md
+++ b/changelog/2025/2025-07-17-product.md
@@ -13,11 +13,11 @@ layout:
     visible: true
 ---
 
-# 2025-07-10: Product service - vendorId added
+# 2025-07-17: Product service - vendorId added
 
 ## Overview
 
-New field `vendorId` was added to the product model. A Vendor employee can see only products that belong to his vendor.
+New field `vendorId` was added to the product model. Vendor employees can see only products that belong to their vendor.
 
 ## New scopes
 - `product.product_read_by_vendor`
