--- a/changelog/2025/2025-07-17-vendor.md
+++ b/changelog/2025/2025-07-17-vendor.md
@@ -13,11 +13,11 @@ layout:
     visible: true
 ---
 
-# 2025-07-10: Vendor Service with locations
+# 2025-07-17: Vendor Service with locations
 
 ## Overview
 
-The Vendor Service allows you to manage vendors and their employees in your system. The vendor employees have access only to vendor's products and orders.
+The Vendor Service allows you to manage vendors and their employees in your system. Vendor employees have access only to vendor's products and orders.
 
 A vendor can have a subsidiary that represents a subdivision of the main vendor. Every vendor and subsidiary can have locations.
 
