--- a/changelog/2025/2025-07-17-vendor.md
+++ b/changelog/2025/2025-07-17-vendor.md
@@ -17,6 +17,10 @@ layout:
 
 ## Overview
 
+{% hint style="danger" %}
+This functionality is in preview mode - some of the features may not be fully operational yet.
+{% endhint %}
+
 The Vendor Service allows you to manage vendors and their employees in your system. Vendor employees have access only to vendor's products and orders.
 
 A vendor can have a subsidiary that represents a subdivision of the main vendor. Every vendor and subsidiary can have locations.
