--- a/changelog/2025/2025-07-18-vendor.md
+++ b/changelog/2025/2025-07-18-vendor.md
@@ -25,7 +25,7 @@ A vendor can have a subsidiary that represents a subdivision of the main vendor.
 
 | Endpoint                                                                                                                                                                    | Description                                        |
 |-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------|
-| [Vendor service](https://developer.emporix.io/api-references/~/revisions/Wfx24n9ntPczSMvu90PA/api-guides-and-references/companies-and-customers/vendor-service)           | New service for vendors management vendor locations added.        |
+| [Vendor service](https://app.gitbook.com/s/d4POTWomuSS7d3dnh4Dg/api-guides-and-references/companies-and-customers/vendor-service)           | New service for vendors management vendor locations added.        |
 
 ## Known problems
 
