--- a/changelog/2025/2025-07-18-order.md
+++ b/changelog/2025/2025-07-18-order.md
@@ -16,8 +16,19 @@ layout:
 # 2025-07-18: Order Service - vendor added
 
 ## Overview
+Order was extended with new capabilities of splitting orders by vendor.
 
-A new attribute `vendor` has been added to the order object. Vendor employees can see and modify only orders that belong to their vendor.
+## New attributes
+- `vendor` has been added to the order object. Vendor employees can see and modify only orders that belong to their vendor.
+- `entries.product.vendor` marks a product as vendor dependent.
+- `orderType` order that was taking part in order splitting will have the value populated
+- `masterOrder` the identifier of a master order. Available on sub orders that have been created after splitting the master order.
+- `splitBy` information how the mater order was split
+- `splitInfo` information based on was sub order was created
+- `subOrders` list of sub orders that were created after splitting the master order.
+
+## New endpoints
+A new endpoint that allows to split an order has been added.
 
 ## New scopes
 - `order.order_read_by_vendor`
@@ -25,16 +36,18 @@ A new attribute `vendor` has been added to the order object. Vendor employees ca
 
 ## Modified endpoints
 
-| Endpoint                                                                                                                                                                                            | Description                   |
-|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------|
-| [Creating a new order](https://developer.emporix.io/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders)                                    | New attribute `vendor` added. |
-| [Retrieving orders](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed)                                                         | New attribute `vendor` added. |
-| [Retrieving a specific order by ID](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders-orderid) | New attribute `vendor` added. |
-| [Updating an order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#put-order-v2-tenant-salesorders-orderid)                 | New attribute `vendor` added. |
-| [Partially updating an order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#patch-order-v2-tenant-salesorders-orderid)     | New attribute `vendor` added. |
-| [Creating a new order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders)                        | New attribute `vendor` added. |
-| [Retrieving order details](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders-orderid)             | New attribute `vendor` added. |
-| [Retrieving a list of orders](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders)                  | New attribute `vendor` added. |
+| Endpoint                                                                                                                                                                                            | Description                        |
+|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------|
+| [Creating a new order](https://developer.emporix.io/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders)                                    | New attributes added.              |
+| [Retrieving orders](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed)                                                         | New attributes added.              |
+| [Retrieving a specific order by ID](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders-orderid) | New attributes added.              |
+| [Updating an order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#put-order-v2-tenant-salesorders-orderid)                 | New attributes added.              |
+| [Partially updating an order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-tenant-managed#patch-order-v2-tenant-salesorders-orderid)     | New attributes added.              |
+| [Creating a new order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders)                        | New attributes added.              |
+| [Retrieving order details](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders-orderid)             | New attributes added.              |
+| [Retrieving a list of orders](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders)                  | New attributes added.              |
+| [Splitting order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#POST-order-split)                                        | New endpoint for splitting orders. |
+//TODO: i dont know if the new endpoint has correct location, its not that easy in git book
 
 ## Known problems
 
