COP-2793 Amended links after moving endpoints from OAuth to Custmer Service

--- a/changelog/2025/2025-04-03-oauth.md
+++ b/changelog/2025/2025-04-03-oauth.md
@@ -13,7 +13,7 @@ layout:
     visible: true
 ---
 
-# 2025-04-03: OAuth Service - new endpoint
+# 2025-04-03: Customer Service (Customer Managed) - new endpoint
 
 ## Overview
 
@@ -26,7 +26,7 @@ If the token is valid, it provides the token details.
 
 | Endpoint                                                                                   | Description                  |
 |--------------------------------------------------------------------------------------------|------------------------------|
-| [Validate a customer token](https://developer.emporix.io/api-references/api-guides-and-references/authorization/oauth-service/api-reference/customer-token#get-customer-tenant-validateauthtoken)            | New endpoint has been added. |
+| [Validate a customer token](https://developer.emporix.io/api-references/api-guides-and-references/companies-and-customers/customer-management/api-reference/authentication-and-authorization#get-customer-tenant-validateauthtoken)            | New endpoint has been added. |
 
 ## Known problems
 
