--- a/changelog/2025/2025-02-26-oauth.md
+++ b/changelog/2025/2025-02-26-oauth.md
@@ -13,7 +13,7 @@ layout:
     visible: true
 ---
 
-# 2025-02-26: OAuth service - Legal Entity information in the auth token
+# 2025-02-26: Customer Service (Customer Managed) - Legal Entity information in the authentication token
 
 ## Overview
 
@@ -26,7 +26,7 @@ If the value is provided in the request, the validation process ensures that the
 
 | Endpoint                                                               | Description                                                      |
 |------------------------------------------------------------------------|------------------------------------------------------------------|
-| [Refreshing a token](https://developer.emporix.io/api-references/api-guides-and-references/authorization/oauth-service/api-reference/customer-token#get-customer-tenant-refreshauthtoken)  | The endpoint extended with an optional `legalEntityId` query param. |
+| [Refreshing a customer token](https://developer.emporix.io/api-references/api-guides-and-references/companies-and-customers/customer-management/api-reference/authentication-and-authorization#get-customer-tenant-refreshauthtoken)  | The endpoint extended with an optional `legalEntityId` query param. |
 
 ## Known problems
 
