--- a/changelog/2025/2025-07-23-order.md
+++ b/changelog/2025/2025-07-23-order.md
@@ -13,18 +13,18 @@ layout:
     visible: true
 ---
 
-# 2025-07-18: Order Service - order splitting
+# 2025-07-23: Order Service - order splitting
 
 ## Overview
 Order was extended with new capabilities of splitting orders by vendor.
 
 ## New attributes
-- `entries.product.vendor` marks a product as vendor dependent.
-- `orderType` order that was taking part in order splitting will have the value populated
-- `masterOrder` the identifier of a master order. Available on sub orders that have been created after splitting the master order.
-- `splitBy` information how the mater order was split
-- `splitInfo` information based on was sub order was created
-- `subOrders` list of sub orders that were created after splitting the master order.
+- `entries.product.vendor` - marks a product as vendor dependent
+- `orderType` populated only for orders involved in the splitting process
+- `masterOrder` the identifier of a master order, available on suborders created after splitting the master order
+- `splitBy` information about how the master order was split, for example split by VENDOR_ID
+- `splitInfo` information based on was suborder was created
+- `subOrders` list of suborders that were created after splitting the master order
 
 ## New endpoints
 A new endpoint that allows to split an order has been added.
@@ -42,8 +42,8 @@ A new endpoint that allows to split an order has been added.
 | [Creating a new order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders)                        | New attributes added.              |
 | [Retrieving order details](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders-orderid)             | New attributes added.              |
 | [Retrieving a list of orders](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders)                  | New attributes added.              |
-| [Splitting order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#POST-order-split)                                        | New endpoint for splitting orders. |
-//TODO: i dont know if the new endpoint has correct location, its not that easy in git book
+| [Splitting order](https://developer.emporix.io/api-references/api-guides-and-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-salesorders-orderid-split)                                        | New endpoint for splitting orders. |
+
 
 ## Known problems
 
