dates and review fix

--- a/changelog/2025/2025-07-24-order.md
+++ b/changelog/2025/2025-07-24-order.md
@@ -13,7 +13,7 @@ layout:
     visible: true
 ---
 
-# 2025-07-23: Order Service - order splitting
+# 2025-07-24: Order Service - order splitting
 
 ## Overview
 Order was extended with new capabilities of splitting orders by vendor.
@@ -23,7 +23,7 @@ Order was extended with new capabilities of splitting orders by vendor.
 - `orderType` - populated only for orders involved in the splitting process
 - `masterOrder` - the identifier of a master order, available on suborders created after splitting the master order
 - `splitBy` - information about how the master order was split, for example split by VENDOR_ID
-- `splitInfo` - information based on was suborder was created
+- `splitInfo` - information based on what was the suborder created
 - `subOrders` - list of suborders that were created after splitting the master order
 
 ## New endpoints
