COP-3643 order splitting mechanism add external fees

--- a/changelog/2025/2025-07-24-order.md
+++ b/changelog/2025/2025-07-24-order.md
@@ -24,6 +24,7 @@ Order was extended with new capabilities of splitting orders by vendor.
 - `masterOrder` - the identifier of a master order, available on suborders created after splitting the master order
 - `splitInfo` - information based on what was the suborder created
 - `subOrders` - list of suborders that were created after splitting the master order
+- `entries.externalFees` - list of external fees applied on entry level
 
 ## New endpoints
 A new endpoint that allows to split an order has been added.
