--- a/changelog/2025/2025-07-29-cart.md
+++ b/changelog/2025/2025-07-29-cart.md
@@ -22,6 +22,12 @@ Two new attributes have been added to cart item:
 * `linePrice` - externally calculated total price for the item line (unit price × quantity)
 * `lineTax` - externally calculated total tax for the item line, allowed only for external product type
 
+New property was added to `itemCalculatedPrice.price`:
+
+`calculated:INTERNAL/EXTERNAL` - indicates how the line item price was determined.
+ - `INTERNAL` — means the calculation was done by Emporix using unit price × quantity.
+ - `EXTERNAL` — means the calculation was done externally with `linePrice` and optionally `lineTax`
+
 ## Updated endpoints
 
 | Endpoint                                                                                                                                                                                   | Description                                                            |
