--- a/changelog/2025/2025-07-29-cart.md
+++ b/changelog/2025/2025-07-29-cart.md
@@ -26,7 +26,7 @@ New property was added to `itemCalculatedPrice.price`:
 
 `calculated:INTERNAL/EXTERNAL` - indicates how the line item price was determined.
  - `INTERNAL` — means the calculation was done by Emporix using unit price × quantity.
- - `EXTERNAL` — means the calculation was done externally with `linePrice` and optionally `lineTax`
+ - `EXTERNAL` — means the calculation was done externally with `lineTax`
 
 ## Updated endpoints
 
