--- a/changelog/2025/2025-07-31-price.md
+++ b/changelog/2025/2025-07-31-price.md
@@ -17,7 +17,7 @@ layout:
 
 ## Overview
 
-The `priceListId` field  has been added to the price match endpoints. 
+A q param support has been added to endpoints for retrieving prices and price-lists. 
 
 ## Updated endpoints
 
