--- a/changelog/2025/2025-08-27-price.md
+++ b/changelog/2025/2025-08-27-price.md
@@ -17,7 +17,7 @@ layout:
 
 ## Overview
 
-New field `vendorId` was added to the price response payload. With new scopes vendor employees can now manage and view prices for products that belong to their vendor.
+New field `vendorId` was added to the price response payload. With the new scopes, vendor employees can now manage and view prices for products that belong to their vendor.
 
 ## New scopes
 - `price.price_manage_by_vendor`
