--- a/changelog/2025/2025-08-27-media.md
+++ b/changelog/2025/2025-08-27-media.md
@@ -17,7 +17,7 @@ layout:
 
 ## Overview
 
-New field `vendorId` was added to the asset response payload. With new scopes vendor employees can now manage and view assets for products that belong to their vendor.
+New field `vendorId` was added to the asset response payload. With the new scopes, vendor employees can now manage and view assets for products that belong to their vendor.
 
 ## New scopes
 - `media.asset_manage_by_vendor`
