--- a/changelog/2025/2025-09-04-customer.md
+++ b/changelog/2025/2025-09-04-customer.md
@@ -17,7 +17,7 @@ layout:
 
 ## Overview
 
-This update introduces support for initial passwords when creating customers. A new `password` field is now available during customer creation, allowing you to set an initial password for new customer accounts. Additionally, the login response now includes an `initialPassword` flag that indicates whether the customer logged in using their initial password, enabling you to prompt users to change their password on first login.
+This update introduces support for initial passwords when creating customers. A new `password` field is now available during customer creation, allowing you to set an initial password for new customer accounts. Additionally, the login response now includes the `initialPassword` flag that indicates whether the customer logged in using their initial password, enabling you to prompt users to change their password on first login.
 
 ## Updated Endpoints
 
