reference to deprecations added to changelog

--- a/changelog/2025/2025-09-02-brand.md
+++ b/changelog/2025/2025-09-02-brand.md
@@ -17,14 +17,14 @@ layout:
 
 ## Overview
 
-All previously deprecated endpoints and fields are now removed.
+All previously deprecated endpoints and fields are now removed ([2025-03-04: Brand Service - deprecations](../2025/2025-03-04-brand.md)).
 
 ## Removed endpoints & fields
 
 | Endpoint                                                                          | Description                                                               |
 |-----------------------------------------------------------------------------------|---------------------------------------------------------------------------|
-| [Creating a media](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/brand-service/api-reference/media)                | Endpoint removed.                                                 |
-| [Deleting a media](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/brand-service/api-reference/media#delete-media-mediaid)           | Endpoint removed.                                                 |
+| Creating a media               | Endpoint removed. Previous documentation under [Creating a media](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/brand-service/api-reference/media) is no longer available.                                               |
+| Deleting a media          | Endpoint removed. Previous documentation under [Deleting a media](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/brand-service/api-reference/media#delete-media-mediaid) is no longer available.                                                  |
 | [Creating a brand](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/brand-service/api-reference/brands#post-brands)              | The `image` and `cloudinaryUrl` fields removed from request body. |
 | [Updating a brand](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/brand-service/api-reference/brands#put-brands-brandid)              | The `image` and `cloudinaryUrl` fields removed from request body. |
 | [Partially updating a brand](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/brand-service/api-reference/brands#patch-brands-brandid)  | The `image` and `cloudinaryUrl` fields removed from request body. |
