--- a/changelog/2025/2025-09-02-label.md
+++ b/changelog/2025/2025-09-02-label.md
@@ -17,15 +17,15 @@ layout:
 
 ## Overview
 
-All previously deprecated endpoints and fields are now removed.
+All previously deprecated endpoints and fields are now removed ([2025-02-24: Label Service - deprecations](../2025/2025-02-24-label.md)).
 
 ## Removed endpoints & fields
 
 
 | Endpoint                                                                          | Description                                                           |
 |-----------------------------------------------------------------------------------|-----------------------------------------------------------------------|
-| [Creating a media](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/label-service/api-reference/media)             | Endpoint removed.                                             |
-| [Deleting a media](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/label-service/api-reference/media#delete-media-mediaid)         | Endpoint removed.                                             |
+| Creating a media | Endpoint removed. Previous documentation under [Creating a media](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/label-service/api-reference/media) is no longer available.                                                               |
+| Deleting a media | Endpoint removed. Previous documentation under [Deleting a media](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/label-service/api-reference/media#delete-media-mediaid) is no longer available.                                                                |
 | [Creating a label](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/label-service/api-reference/label#post-labels)            | The `image` and `cloudinaryUrl` fields removed from request body. |
 | [Updating a label](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/label-service/api-reference/label#put-labels-labelid)              | The `image` and `cloudinaryUrl` fields removed from request body. |
 | [Partially updating a label](https://developer.emporix.io/api-references/api-guides-and-references/products-labels-and-brands/label-service/api-reference/label#patch-labels-labelid)  | The `image` and `cloudinaryUrl` fields removed from request body. |
